Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103084

Hover events are not receivable in embedded QWindow (macOS)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.3.1, 6.4.0 Beta1
    • 6.3.0
    • QPA
    • None
    • macOS
    • 67b9baac52 (qt/qtbase/dev) 67b9baac52 (qt/tqtc-qtbase/dev) d467a2742a (qt/qtbase/6.3) d467a2742a (qt/tqtc-qtbase/6.3)

      In our products we reparent a QWindow's underlying native view onto a foreign host window by using QPA's setEmbeddedInForeignView API, which in general works fine.

      Since Qt 6.3 however, hover events are not received anymore, as obviously the qnsview is more strictly checked against being a content view, but which is not the case for embedded QWindows (see Details).

      The proposed patch reintroduces support for hover events in the embedded use case.

       

      Pick target: 6.3

       

      Details:

        For Gerrit Dashboard: QTBUG-103084
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            stefan.wastl Stefan Wastl
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes