macOS: Forward hover-events for embedded windows

If a QWindow is embedded into a native view it's effectively the
root window, similar to a top level QWindow, and we need to forward
hover events on behalf of itself and all child windows.

Fixes: QTBUG-103084
Change-Id: I1e94b9447fb561c1b02db87738de235c5d12b3a4
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: <stefan.wastl@native-instruments.de>
(cherry picked from commit 67b9baac52f7078af772f76b15743080282b48ef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>